[package]
name = "fs-format"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tianmu-fs = { path = "../tianmu-fs" }
# tisu-fs = { path = "../tisu-fs" }
# tisu-driver = { path = "../tisu-driver" }
tianmu-fs = { git = "https://github.com/TisuOS/tianmu-fs", tag = "v1.0" }
tisu-fs = { git = "https://github.com/TisuOS/tisu-fs", tag = "v2.0" }
device-buffer = { git = "https://github.com/TisuOS/device-buffer", tag = "v2.0" }
