[package]
name = "fs-format"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tianmu-fs = { git = "https://github.com/TisuOS/tianmu-fs", tag = "v1.0" }
tisu-fs = { path = "../tisu-fs" }
tisu-driver = { path = "../tisu-driver" }
