[package]
name = "fs-format"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tianmu-fs = { git = "https://gitee.com/TisuOS/tianmu-fs", tag = "v1.0" }
tisu-driver = { git = "https://gitee.com/TisuOS/tisu-driver", tag = "v3.1" }
tisu-fs = { git = "https://gitee.com/TisuOS/tisu-fs", tag = "v4.1" }
